--- a/style.css
+++ b/style.css
@@ -239,11 +239,72 @@ h1{
     transition: 0.5s ease;
     width: 100px;
 }
-.cajafooter{
-    background: rgb(63, 63, 63);
-    width: 100%;
-    height: 300px;
+.btn-3{
+    background: var(--text-footer);
+    display: flex;
+    color: black;
+    text-decoration: none;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    margin-top: 10px;
+    height: 50px;
+    width: 100px;
+    border-style: none;
+    z-index: 1;
+    cursor: pointer;
+    font-size: 20px;
 }
+.btn-3:before,.btn-3::after{
+    content: "";
+    top: 0px;
+    left: 0px;
+    position: absolute;
+    width: 0px;
+    height: 50px;
+    background: var(--btn-footer);
+    transition: 0.5s;
+    z-index: -1;
+    opacity: 0;
+}
+.btn-3:hover::before, .btn-3:hover::after{
+    transition: 0.5s ease;
+    width: 100px;
+    opacity: 1;
+}
+.cajafooter{
+    background: rgb(31, 31, 31);
+    color: var(--text-footer);
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.textfooter{
+
+    display: flex;
+    flex-direction: column;
+    margin: 5%;
+}
+h3{
+    margin-top: 10px;
+    font-weight: initial;
+    font-size: 15px;
+    cursor: pointer;
+}
+h3:hover{
+   color: var(--btn-footer);
+   /*text-shadow: var(--btn-footer) 0px 5px 7px;*/
+   transform: translateX(10px);
+   transition: 0.5s;
+}
+.redes{
+    border-top: solid white;
+    height: 2px;
+    width: 80%;
+    margin-top: 20px;
+}
+
 
 
 
